[gd_scene load_steps=10 format=3 uid="uid://derylpvlrv2td"]

[ext_resource type="Script" path="res://00_SCENE/Board_control_object_test/Movable_obj.gd" id="1_tsbop"]
[ext_resource type="Script" path="res://00_SCENE/Board_control_object_test/On_click_object.gd" id="2_54u4f"]
[ext_resource type="Material" uid="uid://xcmes75nexaq" path="res://00_SCENE/Board_control_object_test/Material/moving_object.tres" id="3_6depj"]
[ext_resource type="Material" uid="uid://hnc22lq0or5t" path="res://00_SCENE/Board_control_object_test/Material/moving_overlap_object.tres" id="3_6u8l7"]
[ext_resource type="Material" uid="uid://dqtd437bbkrae" path="res://00_SCENE/Board_control_object_test/Material/movable_ob_flat.tres" id="3_ou25m"]

[sub_resource type="GDScript" id="GDScript_48mwa"]
script/source = "extends Node

signal On_View

"

[sub_resource type="BoxShape3D" id="BoxShape3D_23ufj"]
size = Vector3(0.07323, 0.00931397, 0.0739868)

[sub_resource type="BoxShape3D" id="BoxShape3D_uak2r"]
size = Vector3(0.07323, 0.00709839, 0.0739868)

[sub_resource type="BoxMesh" id="BoxMesh_5n21d"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Movable_obj_flat_00" type="Node3D" node_paths=PackedStringArray("collider", "limit_zone", "move_root", "rotation_root", "On_Move", "Render")]
script = ExtResource("1_tsbop")
collider = NodePath("Rotation_root/Area/CollisionShape3D")
limit_zone = NodePath("Rotation_root/Limit_zone")
move_root = NodePath(".")
rotation_root = NodePath("Rotation_root")
On_Move = NodePath("Rotation_root/Area/On_Move")
Render = NodePath("Rotation_root/MeshInstance3D")
moving_material = ExtResource("3_6depj")
overlaping_object = ExtResource("3_6u8l7")

[node name="Rotation_root" type="Node3D" parent="."]
transform = Transform3D(1.66806, 0, 0, 0, 1.66806, 0, 0, 0, 1.66806, 0, 0, 0)

[node name="Area" type="Area3D" parent="Rotation_root"]

[node name="On_Move" type="Node" parent="Rotation_root/Area" node_paths=PackedStringArray("Root")]
script = ExtResource("2_54u4f")
Root = NodePath("../../..")

[node name="On_View" type="Node" parent="Rotation_root/Area"]
script = SubResource("GDScript_48mwa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rotation_root/Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00322876, 0)
shape = SubResource("BoxShape3D_23ufj")

[node name="Limit_zone" type="Area3D" parent="Rotation_root"]
collision_layer = 4
collision_mask = 4
input_ray_pickable = false

[node name="Limit" type="Node" parent="Rotation_root/Limit_zone"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rotation_root/Limit_zone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09457e-06, 0.00242332, 0.000238031)
shape = SubResource("BoxShape3D_uak2r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rotation_root"]
transform = Transform3D(0.369784, 0, 0, 0, 0.0100831, 0, 0, 0, 0.369784, 0, 0.00323686, 0)
mesh = SubResource("BoxMesh_5n21d")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_ou25m")
